--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,16 @@
 {
     "env": {
+        "browser": true,
         "commonjs": true,
-        "es2021": true,
-        "node": true
+        "es2021": true
     },
     "extends": "airbnb-base",
     "parserOptions": {
         "ecmaVersion": "latest"
     },
     "rules": {
-        "eqeqeq": "off"
+        "no-underscore-dangle": "off",
+        "no-console": "off",
+        "camelcase": "off"
     }
 }
